--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "blobfile>=3.0.0",
+    "fairscale>=0.4.13",
+    "fire>=0.7.0",
+    "torch>=2.5.1",
+]
