--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ dependencies = [
     "fire>=0.7.0",
     "ipykernel>=6.29.5",
     "llama-stack>=0.0.63",
+    "matplotlib>=3.10.0",
+    "seaborn>=0.13.2",
     "tiktoken>=0.8.0",
     "torch>=2.5.1",
+    "tqdm>=4.67.1",
 ]
