--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "llama-stack>=0.0.63",
     "matplotlib>=3.10.0",
     "seaborn>=0.13.2",
+    "statsmodels>=0.14.4",
     "tiktoken>=0.8.0",
     "torch>=2.5.1",
     "tqdm>=4.67.1",
