--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 # source code and figures
 !llama/
-!llama/*/
+!llama/**/
 !llama/**/*.py
 !tests/
 !tests/**/*.py
@@ -31,19 +31,16 @@
 
 # data
 !dumps/
-!dumps/**
 !dumps/**/*.json*
 !dumps/**/*.md
 !dumps/**/*.pt
 !data/
-!data/**
 !data/**/*
 
 # misc
 !tokenizer.model
 !slurm/
-!slurm/
-!slurm/**.py
-!slurm/**.sh
+!slurm/**/*.py
+!slurm/**/*.sh
 !sweeps/
 !sweeps/*.yml
