bleurt and comet eval scripts

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@
 
 # data
 !dumps/
+!dumps/**
 !dumps/**/*.json*
 !dumps/**/*.md
 !dumps/**/*.pt
@@ -40,6 +41,7 @@
 # misc
 !tokenizer.model
 !slurm/
+!slurm/**
 !slurm/**/*.py
 !slurm/**/*.sh
 !sweeps/
