--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,11 @@
 !data/
 !data/**/*
 
+# 40 mb too big for gh
+data/squad/train-v2.0.json
+data/triviaqa
+data/triviaqa.tar.gz
+
 # misc
 !tokenizer.model
 !slurm/
