--- a/.gitignore
+++ b/.gitignore
@@ -38,10 +38,11 @@
 !data/
 !data/**/*
 
-# 40 mb too big for gh
+# things too big for gh
 data/squad/train-v2.0.json
 data/triviaqa
 data/triviaqa.tar.gz
+dumps/triviaqa/qa_n16.json
 
 # misc
 !tokenizer.model
