--- a/sweep/qa_mixed.yml
+++ b/sweep/qa_mixed.yml
@@ -6,7 +6,7 @@ command:
   - "python"
   - ${program}
   - "--task=triviaqa"
-  - "--data-path='/home/tbai4/llama3/dumps/triviaqa/qa_mixed.json'"
+  - "--data-path='/home/tbai4/llama3/dumps/triviaqa/qa_mixed_large.json'"
   - "--ckpt-dir='/scratch4/jeisner1/tjbai/llama_8b'"
   - "--tokenizer-path='/scratch4/jeisner1/tjbai/llama_8b/tokenizer.model'"
   - ${args}
@@ -27,7 +27,7 @@ parameters:
     min: 1e-6
     max: 3e-4
   epochs:
-    value: 4
+    values: [2, 4]
   gradient_accumulation_steps:
     value: 4
   checkpoint_freq:
@@ -36,3 +36,4 @@ parameters:
     value: 100
   max_seq_len:
     value: 8192
+
