--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "blobfile>=3.0.0",
+    "datasets>=3.4.1",
     "fairscale>=0.4.13",
     "fire>=0.7.0",
     "ipykernel>=6.29.5",
