triviaqa eval results, large file

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 dumps/triviaqa/qa_mixed_large.json filter=lfs diff=lfs merge=lfs -text
+dumps/triviaqa/eval_large.json filter=lfs diff=lfs merge=lfs -text
